# fast_imas_IPOL

./: .gitignore  CMakeLists.txt  IMAS_coverings.cpp  IMAS_coverings.h  IMAS_matlab.cpp  LICENSE  README.md  fundamental.cfg  homography.cfg  imas.cpp  imas.h  main.cpp  main_standalone.cpp  mex_and_omp.cpp  mex_and_omp.h
IPOLcaller/: ddl  main_caller.sh
adaptiveIMAS/: README.md  libLocalDesc.py  library.py  requirements.txt  setup.sh
adaptiveIMAS/IPOLcaller/: adimas_caller.py  ddl.txt  run.sh
adaptiveIMAS/hesaffnet/: LAF.py  Losses.py  OnePassSIR.py  ReprojectionStuff.py  SparseImgRepresenter.py  Utils.py  extract_geomOriTh.py  extract_geom_and_desc_upisup.py  extract_geom_and_desc_upisupTh.py  hesaffBaum.py  hesaffnet.py
io_png/: io_png.h
libLocalDesc/ldahash/: hashpro.h  lib_ldahash.cpp  lib_ldahash.h
libLocalDesc/sift/: demo_lib_sift.cpp  demo_lib_sift.h
libLocalDesc/surf/: README  descriptor.cpp  descriptor.h  extract_surf.cpp  extract_surf.h  image.cpp  image.h  integral.h  keypoint.cpp  keypoint.h  lib.h  lib_match_surf.cpp  lib_match_surf.h
libNumerics/: CMakeLists.txt
libOrsa/: CMakeLists.txt  conditioning.cpp  conditioning.hpp  fundamental_model.cpp  fundamental_model.hpp  orsa_fundamental.cpp  orsa_fundamental.hpp  orsa_homography.cpp  orsa_homography.hpp  orsa_model.cpp  orsa_model.hpp
libSimuTilts/: digital_tilt.cpp  digital_tilt.h  flimage.h  fproj.cpp  fproj.h  frot.cpp  frot.h  library.cpp  library.h  splines.cpp  splines.h
libUSAC/config/: ConfigFileReader.cpp  ConfigFileReader.h  ConfigParams.cpp  ConfigParams.h  ConfigParamsFundmatrix.cpp  ConfigParamsFundmatrix.h  ConfigParamsHomog.cpp  ConfigParamsHomog.h
libUSAC/estimators/: FundmatrixEstimator.h  HomogEstimator.h  TemplateEstimator.h  USAC.h
libUSAC/utils/: FundmatrixFunctions.cpp  FundmatrixFunctions.h  HomographyFunctions.cpp  HomographyFunctions.h  MathFunctions.cpp  MathFunctions.h
